--- a/DixionClinic/DixionClinic/DixionClinic/MainPage.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/MainPage.xaml
@@ -2,7 +2,7 @@
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DixionClinic.MainPage"
-             xmlns:pages="clr-namespace:DixionClinic">
+             xmlns:pages="clr-namespace:DixionClinic" NavigationPage.HasNavigationBar="False">
   <MasterDetailPage.Master>
     <pages:MainPageMaster x:Name="MasterPage"/>
   </MasterDetailPage.Master>
