--- a/DixionClinic/DixionClinic/DixionClinic/MainPageDetail.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/MainPageDetail.xaml
@@ -4,6 +4,6 @@
              x:Class="DixionClinic.MainPageDetail"
              Title="Detail">
   <StackLayout Padding="10">
-    <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Master' page with an Icon that references it."/>
+    <Label Text="This is a detail page."/>
   </StackLayout>
 </ContentPage>
