--- a/DixionClinic/DixionClinic/DixionClinic/Views/Feedback.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/Views/Feedback.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DixionClinic.Specialists">
+             x:Class="DixionClinic.Feedback" Title="Отзыв">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
