--- a/DixionClinic/DixionClinic/DixionClinic/Views/DoctorView.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/Views/DoctorView.xaml
@@ -16,8 +16,15 @@
                     <Label Text="Категория: " Margin="10" FontSize="Medium" FontAttributes="Bold"/>
                     <Label x:Name="cat" Margin="0,10,10,0" FontSize="Medium"/>
                 </StackLayout>
-                <Label Text="Подробная информация: " FontSize="Medium" FontAttributes="Bold" Margin="10,10,0,0"/>
-                <Label x:Name="info" FontSize="Medium" FontAttributes="Italic" Margin="10"/>
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Подробная информация: " FontSize="Medium" FontAttributes="Bold" Margin="10,10,0,0"/>
+                    <Label x:Name="show" Text="Показать" TextColor="Black" FontSize="Medium" FontAttributes="Italic" Margin="20,10,0,0">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                        </Label.GestureRecognizers>
+                    </Label>
+                </StackLayout>
+                <Label x:Name="info" FontSize="Medium" FontAttributes="Italic" Margin="10" IsVisible="False"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
