Пост запрос на Auths

--- a/DixionClinic/DixionClinic/DixionClinic/Views/SignUp.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/Views/SignUp.xaml
@@ -5,24 +5,24 @@
     <ContentPage.Content>
         <StackLayout>
             <Entry x:Name="UserName" Placeholder="Введите имя..." PlaceholderColor="Gray" Margin="10,30,0,0"
-                   HorizontalOptions="FillAndExpand" Keyboard="Default"/>
+                   HorizontalOptions="FillAndExpand" Keyboard="Text"/>
             <Entry x:Name="UserSecondName" Placeholder="Введите фамилию..." PlaceholderColor="Gray" Margin="10,10,0,0"
                    HorizontalOptions="FillAndExpand" Keyboard="Text"/>
             <Entry x:Name="UserThirdName" Placeholder="Введите отчество" PlaceholderColor="Gray" Margin="10,10,0,0"
-                   HorizontalOptions="FillAndExpand" Keyboard="Chat"/>
+                   HorizontalOptions="FillAndExpand" Keyboard="Text"/>
             <Entry x:Name="UserEmail" Placeholder="Введите email..."  PlaceholderColor="Gray" Margin="10,10,0,0"
                    HorizontalOptions="FillAndExpand" Keyboard="Email"/>
-            <Label x:Name="ErrorMessageWrongEmail" Text="Неверный формат email!" TextColor="Red" FontSize="Default"
+            <Label x:Name="ErrorMessageWrongEmail" Text="Неверный формат email!" TextColor="Red" FontSize="Medium"
                    Margin="10,0,0,0" IsVisible="False"/>
-            <Label x:Name="ErrorMessageEmailAlreadyExists" Text="Такой email уже зарегистрирован!" TextColor="Red" FontSize="Default"
+            <Label x:Name="ErrorMessageEmailAlreadyExists" Text="Такой email уже зарегистрирован!" TextColor="Red" FontSize="Medium"
                    Margin="10,0,0,0" IsVisible="False"/>
             <Entry x:Name="UserPass" Placeholder="Введите пароль..."  PlaceholderColor="Gray" Margin="10,10,0,0" IsPassword="True"
                    HorizontalOptions="FillAndExpand"/>
             <Label Text="Длина пароля должна быть не менее 8 символов" TextColor="Gray" FontSize="Default" Margin="10,5,0,0"/>
-            <Label x:Name="ShortPass" Text="Пароль слишком короткий!" TextColor="Red" FontSize="Default" Margin="10,5,0,0" IsVisible="False"/>
+            <Label x:Name="ShortPass" Text="Пароль слишком короткий!" TextColor="Red" FontSize="Medium" Margin="10,5,0,0" IsVisible="False"/>
             <Entry x:Name="ConfirmPass" Placeholder="Подтвердите пароль..."  PlaceholderColor="Gray" Margin="10,10,0,0" IsPassword="True"
                    HorizontalOptions="FillAndExpand"/>
-            <Label x:Name="ErrorMessagePass" Text="Пароли не совпадают!" TextColor="Red" FontSize="Default" Margin="10,0,0,0" IsVisible="False"/>
+            <Label x:Name="ErrorMessagePass" Text="Пароли не совпадают!" TextColor="Red" FontSize="Medium" Margin="10,0,0,0" IsVisible="False"/>
             <Entry x:Name="Phone" Placeholder="Введите ваш телефон..." PlaceholderColor="Gray" Margin="10,10,0,0"
                    HorizontalOptions="FillAndExpand" Keyboard="Telephone"/>
             <Button x:Name="SignUpButton" Text="Зарегистрироваться" TextColor="White" BackgroundColor="MediumBlue"
