--- a/DixionClinic/DixionClinic/DixionClinic/Views/Departments.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/Views/Departments.xaml
@@ -10,12 +10,17 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Padding="15,10" HorizontalOptions="FillAndExpand" Margin="0,20,0,0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="10"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="10"/>
+                                </Grid.RowDefinitions>
                                 <Label VerticalOptions="FillAndExpand" 
                                    VerticalTextAlignment="Center" 
                                    Text="{Binding Name}" 
-                                   FontSize="Large"/>
-                            </StackLayout>
+                                   FontSize="Large" Margin="10" Grid.Row="1"/>
+                            </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
