--- a/DixionClinic/DixionClinic/DixionClinic/Views/DoctorView.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/Views/DoctorView.xaml
@@ -25,6 +25,36 @@
                     </Label>
                 </StackLayout>
                 <Label x:Name="info" FontSize="Medium" FontAttributes="Italic" Margin="10" IsVisible="False"/>
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Отзывы о враче" FontSize="Medium" FontAttributes="Bold" Margin="10,10,0,20"/>
+                    <Label x:Name="showFeedBack" Text="Показать" TextColor="Black" FontSize="Medium" FontAttributes="Italic" Margin="20,10,0,20">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_1"/>
+                        </Label.GestureRecognizers>
+                    </Label>
+                </StackLayout>
+                <ListView HasUnevenRows="True" IsVisible="False" x:Name="commentsList">
+                    <ListView.Header>
+                        <Button x:Name="makeFeedBack" Text="Оставить отзыв о враче" TextColor="White" BackgroundColor="MediumBlue"
+                    FontSize="Medium"/>
+                    </ListView.Header>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout Padding="15,10" HorizontalOptions="FillAndExpand" Margin="0,10,0,0">
+                                    <Label VerticalOptions="CenterAndExpand" 
+                                   VerticalTextAlignment="Center" 
+                                   Text="{Binding Text}" 
+                                   FontSize="Medium" FontAttributes="Italic"/>
+                                    <!--Label VerticalOptions="CenterAndExpand" 
+                                   VerticalTextAlignment="Center" 
+                                   Text="{Binding Name}" 
+                                   FontSize="Default" FontAttributes="Italic"/-->
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
