--- a/DixionClinic/DixionClinic/DixionClinic/Views/Specialists.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/Views/Specialists.xaml
@@ -10,12 +10,17 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Padding="15,10" HorizontalOptions="FillAndExpand" Margin="0,20,0,0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="10"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="10"/>
+                                </Grid.RowDefinitions>
                                 <Label VerticalOptions="FillAndExpand" 
                                    VerticalTextAlignment="Center"
-                                   Text="{Binding Name}" 
+                                   Text="{Binding Name}" Grid.Row="1" Margin="10"
                                    FontSize="Large"/>
-                            </StackLayout>
+                            </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
