--- a/DixionClinic/DixionClinic/DixionClinic/Views/Registration.xaml
+++ b/DixionClinic/DixionClinic/DixionClinic/Views/Registration.xaml
@@ -24,13 +24,13 @@
                FontSize="Medium"
                IsVisible="False" />
             <Button  x:Name="signBttn"  Grid.Row="4" Text="Войти" FontSize="Medium" Command="{Binding ToHomePage}" HeightRequest="60" BackgroundColor="MediumBlue" TextColor="White"/>
-            <Label Grid.Row="5" Text="Забыли логин или пароль?" TextColor="Gray" FontSize="Medium" x:Name="delThis"
+            <Label Grid.Row="5" Text="Забыли логин или пароль?" TextColor="Gray" FontSize="Medium" x:Name="forgetPassAndLogin"
                HorizontalOptions="CenterAndExpand">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding ToForgetPassPage}"/>
                 </Label.GestureRecognizers>
             </Label>
-            <Button Grid.Row="6" Text="Зарегистрироваться" BackgroundColor="LightGray" HeightRequest="70" FontSize="Medium" VerticalOptions="EndAndExpand"
+            <Button x:Name="regBttn" Grid.Row="6" Text="Зарегистрироваться" BackgroundColor="LightGray" HeightRequest="70" FontSize="Medium" VerticalOptions="EndAndExpand"
                     Command="{Binding ToSignUpPage}"/>
             <ActivityIndicator x:Name="loadIndicator" Color="MediumBlue" Grid.Row="4" IsVisible="False" IsRunning="True"/>
         </Grid>
